v0.3.0/_sources/projections/conic/conic_lambert.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/conic/conic_lambert.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_conic_conic_lambert.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_conic_conic_lambert.py:


Lambert Conic Conformal Projection
==================================

This conic projection was designed by the Alsatian mathematician Johann Heinrich
Lambert (1772) and has been used extensively for mapping of regions with predominantly
east-west orientation, just like the Albers projection. Unlike the Albers projection,
Lambert’s conformal projection is not equal-area. The parallels are arcs of circles
with a common origin, and meridians are the equally spaced radii of these circles. As
with Albers projection, it is only the two standard parallels that are distortion-free.

**l**\ *lon0/lat0*\ /\ *lat1/lat2*\ */scale*
or **L**\ *lon0/lat0*\ /\ *lat1/lat2*\ */width*

The projection is set with **l** or **L**. The projection center is set by *lon0/lat0*
and two standard parallels for the map are set with *lat1/lat2*. The figure size is set
with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 19-32



.. image:: /projections/conic/images/sphx_glr_conic_lambert_001.png
    :alt: conic lambert
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        shorelines="1/0.5p",
        region=[-130, -70, 24, 52],
        projection="L-100/35/33/45/12c",
        land="gray",
        borders=["1/thick,black", "2/thin,black"],
        frame="afg",
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.261 seconds)


.. _sphx_glr_download_projections_conic_conic_lambert.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: conic_lambert.py <conic_lambert.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: conic_lambert.ipynb <conic_lambert.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
